idf_component_register(SRCS "AppMain.c"
                            "ESP32WifiConnector.c"
                            "LoraNodeManager.c"
                            "LoraRealtimeSender.c"
                            "LoraRealtimeSenderItf.c"
                            "LoraServerManager.c"
                            "LoraTransceiverItf.c"
                            "NetworkServerProtocolItf.c"
                            "SemtechProtocolEngine.c"
                            "ServerConnectorItf.c"
                            "ServerManagerItf.c"
                            "SX1276.c"
                            "TransceiverManagerItf.c"
                            "Utilities.c"
                            "test_mqtt.c"
                    INCLUDE_DIRS "include")